--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="bg-purple-800 text-white flex justify-between">
-        <img src="mobile.jpg" class="h-12 pt-3 px-3 rounded-2xl" alt="">
+       <span class="text-xl flex items-center mx-3 font-bold">PhoneMania</span>
         <ul class="px-28 py-4 flex space-x-11 justify-end">
             <li class="cursor-pointer">Home</li>
             <li class="cursor-pointer">About</li>
@@ -18,12 +18,21 @@
             <li class="cursor-pointer">Contact Us</li>
         </ul>
     </nav>
-    <main>
-        <div class="main bg-fuchsia-100  h-66 py-40">
-            <div class="text-3xl pl-9">
+    <main class=" bg-fuchsia-100 flex justify-around">
+        <div class="main py-40 pl-9">
+            <div class="text-3xl ">
                 the best phone in the town
             </div>
+            <p class="py-3 w-1/3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat ullam fuga hic tempore aspernatur
+                consquid eoerror quis vitae nobis.</p>
+                <div class="my-4">
+                    <button class="bg-purple-800 px-3 py-2 rounded-xl text-white hover:text-slate-900 hover:bg-fuchsia-700 mx-2">Buy now</button>
+                    <button class="bg-purple-800 px-3 py-2 rounded-xl text-white  hover:text-slate-900 hover:bg-fuchsia-700 mx-2">Contact Us</button>
+                </div>
 
+        </div>
+        <div class="flex items-center">
+            <img src="bg1.png" class="h-80" alt="">
         </div>
     </main>
 </body>
